# solana_anchor_develop_template

./: .chain.yml  .env.dev  .eslintrc.js  .eslintrc.json  .gitignore  Anchor.toml  Makefile  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
migrations/: deploy.ts
programs/counter_program/: Cargo.toml
programs/counter_program/src/: lib.rs
programs/solana_anchor_template/: Cargo.toml
programs/solana_anchor_template/src/: lib.rs
tests/: counter_program.ts  solana_anchor_template.ts
