[package]
name = "counter_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
arrayref = "0.3.7"
num_enum = "0.7.2"
bytemuck = "^1"
# raydium-amm-v3 = { path = "/Users/peterwang/Desktop/work_codes/raydium-clmm/programs/amm", features = ["cpi"] }
